[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
strum = "0.24"
strum_macros = "0.24"
quickcheck = "1"
async-trait = "0.1.60"

[dev-dependencies]
quickcheck = "1"
